horizontal scrolling fix.

--- a/app/style/main.styl
+++ b/app/style/main.styl
@@ -35,7 +35,6 @@ $cTableRowBorder = #d3d3d3
 	.header-cell,
 	.filter-cell,
 	.data-cell
-		padding 4px 8px
 		border-right 1px solid $cTableRowBorder
 		border-bottom 1px solid $cTableRowBorder
 		background-color $dirtyWhite
